--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.1.1: (Future)
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
+ - Qt: Fix emulator crashing when full screen if a game is not running
 Misc:
  - Qt: Disable sync to video by default
 
