All: Update CHANGES for missing fix

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@ Features:
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
+Misc:
+ - Qt: Disable sync to video by default
 
 0.1.0: (2014-12-13)
  - Initial release
