--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - GBA Thread: Allow halted games to exit cleanly
  - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
  - ARM7: Fix LDM writeback to a register already written
+ - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
 Misc:
  - Qt: Disable sync to video by default
 
