--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Bugfixes:
  - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
  - ARM7: Fix LDM writeback to a register already written
  - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
+ - GBA BIOS: Fix BIOS prefetch after returning from a SWI
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
