--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Bugfixes:
  - ARM7: Fix LDM writeback to a register already written
  - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
  - GBA BIOS: Fix BIOS prefetch after returning from a SWI
+ - Debugger: Negative PC-relative loads now properly subtract the offset
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
