--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Bugfixes:
  - ARM7: Extend prefetch by one stage
  - GBA BIOS: Fix BIOS prefetch after returning from a SWI
  - Debugger: Negative PC-relative loads now properly subtract the offset
+ - Qt: Fix window focus issues
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
