--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - GBA BIOS: Fix BIOS prefetch after returning from a SWI
  - Debugger: Negative PC-relative loads now properly subtract the offset
  - Qt: Fix window focus issues
+ - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
