Qt: Properly set default video recording settings

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Bugfixes:
  - Debugger: Negative PC-relative loads now properly subtract the offset
  - Qt: Fix window focus issues
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
+ - Qt: Properly set default video recording settings
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
