Qt: Properly set default video recording settings

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Bugfixes:
  - Qt: Fix window focus issues
  - GBA Audio: Support 16-bit writes to FIFO audio
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
+ - Qt: Properly set default video recording settings
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
