--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Features:
  - Add scale presets for up to 6x
  - Debugger: Add CLI "frame", frame advance command
  - Better audio resampling via FFmpeg
+ - Settings window
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
