--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Features:
  - Better audio resampling via FFmpeg
  - Settings window
  - Bilinear resampling option
+ - Add option to skip BIOS start screen
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
