Qt: Set default log level to FATAL, ERROR and WARN
Conflicts:
	CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
  - Qt: Handle a game crash without crashing
+ - Qt: Set default log level to FATAL, ERROR and WARN
 
 0.1.0: (2014-12-13)
  - Initial release
