--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - GBA Audio: Support 16-bit writes to FIFO audio
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
  - Qt: Properly set default video recording settings
+ - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
