GBA Audio: Make larger buffer sizes than 2048 actually work properly
Conflicts:
	src/gba/gba-audio.c

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Bugfixes:
  - Qt: Fix window focus issues
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
  - Qt: Properly set default video recording settings
+ - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
