GBA Audio: Audio buffer sizes are now correct sizes for both sample rates

--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@ Bugfixes:
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
  - Qt: Properly set default video recording settings
  - GBA Audio: Make larger buffer sizes than 2048 actually work properly
+ - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
