Qt: Clarify some phrasing in the menus

--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Misc:
  - Qt: Handle a game crash without crashing
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - Qt: Set default log level to FATAL, ERROR and WARN
+ - Qt: Clarify some phrasing in the menus
 
 0.1.0: (2014-12-13)
  - Initial release
