--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Misc:
  - GBA: Exit cleanly on FATAL if the port supports it
  - Qt: Handle a game crash without crashing
  - Qt: Set default log level to FATAL, ERROR and WARN
+ - Qt: Clarify some phrasing in the menus
 
 0.1.0: (2014-12-13)
  - Initial release
