Qt: Add MRU list

--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Features:
  - Settings window
  - Bilinear resampling option
  - Add option to skip BIOS start screen
+ - List of recently opened games
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
