GBA Video: Fix blend issues with obscured middle layers
Conflicts:
	CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Bugfixes:
  - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
  - Qt: Properly set default video recording settings
  - GBA Audio: Make larger buffer sizes than 2048 actually work properly
+ - GBA Video: Fix blend issues with obscured middle layers
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
