GBA Video: Fix blend issues with obscured middle layers

--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Bugfixes:
  - Qt: Properly set default video recording settings
  - GBA Audio: Make larger buffer sizes than 2048 actually work properly
  - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
+ - GBA Video: Fix blend issues with obscured middle layers
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
