--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Bugfixes:
  - Qt: Properly set default video recording settings
  - GBA Audio: Make larger buffer sizes than 2048 actually work properly
  - GBA Video: Fix blend issues with obscured middle layers
+ - Video: Ensure FFmpeg encoder has audio frames
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
