GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Bugfixes:
  - GBA Video: Fix blend issues with obscured middle layers
  - Video: Ensure FFmpeg encoder has audio frames
  - Video: Fix uncompressed PCM audio recording
+ - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
