Debugger: Align PC-relative loads in Thumb

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - Video: Ensure FFmpeg encoder has audio frames
  - Video: Fix uncompressed PCM audio recording
  - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
+ - Debugger: Align PC-relative loads in Thumb
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
