--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Bugfixes:
  - Video: Fix uncompressed PCM audio recording
  - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
  - Debugger: Align PC-relative loads in Thumb
+ - Debugger: Fix watchpoints triggering too late
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
