--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Features:
  - Add option to skip BIOS start screen
  - List of recently opened games
  - Support for games using the Solar Sensor
+ - Debugger: Add CLI functions for writing to memory
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
