--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@ Misc:
  - Qt: Set default log level to FATAL, ERROR and WARN
  - Qt: Clarify some phrasing in the menus
  - GBA Memory: Implement 16- and 32-bit loads from SRAM
+ - Qt: Clear active buttons when focus is lost
 
 0.1.0: (2014-12-13)
  - Initial release
