--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Features:
  - Better audio resampling via blip-buf
  - Game Pak overrides dialog for setting savetype and sensor values
  - Support for games using the tilt sensor
+ - Remappable shortcuts for keyboard and gamepad
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
