GBA BIOS: Implement Diff8bitUnFilterWram and Diff16bitUnFilter

--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Features:
  - Support for games using the tilt sensor
  - Remappable shortcuts for keyboard and gamepad
  - Rewinding of emulation
+ - Implemented BIOS routines Diff8bitUnFilterWram, and Diff16bitUnFilter
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
