--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,7 @@ Bugfixes:
  - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
  - Qt: Fix a race condition when a game crashes immediately
  - Qt: Fix some cases where key mapping can break if focus is adjusted
+ - GBA Memory: Filter out top nybble of DMA addresses
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
