--- a/CHANGES
+++ b/CHANGES
@@ -45,6 +45,7 @@ Bugfixes:
  - Qt: Fix a race condition when a game crashes immediately
  - Qt: Fix some cases where key mapping can break if focus is adjusted
  - GBA Memory: Filter out top nybble of DMA addresses
+ - Debugger: Fix binary print putting spaces between digits
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
