Util: Support IPv6

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Features:
  - Remappable shortcuts for keyboard and gamepad
  - Rewinding of emulation
  - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
+ - Support IPv6
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
