--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@ Bugfixes:
  - Qt: Fix some cases where key mapping can break if focus is adjusted
  - GBA Memory: Filter out top nybble of DMA addresses
  - Debugger: Fix binary print putting spaces between digits
+ - GBA BIOS: Fix LZ77UnCompVram to use 16-bit loads from decompressed memory
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
