Util: Add BPS patch support (fixes #150)

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Features:
  - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
  - Support IPv6
  - Save directory of last loaded file
+ - Support BPS patches
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
