GBA Memory: Fix initial DMA state

--- a/CHANGES
+++ b/CHANGES
@@ -54,6 +54,7 @@ Bugfixes:
  - GBA BIOS: Fix HuffUnComp to work when games pass an invalid bit length
  - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
  - GBA Memory: Properly bounds-check VRAM accesses
+ - GBA Memory: Fix initial DMA state
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
