--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,7 @@ Bugfixes:
  - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
  - GBA Memory: Properly bounds-check VRAM accesses
  - GBA Memory: Fix initial DMA state
+ - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
