--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@ Bugfixes:
  - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
  - GBA BIOS: Fix BIOS prefetch after reset
  - GBA Memory: Fix alignment of open bus 8- and 16-bit loads
+ - GBA BIOS: Fix HuffUnComp boundary conditions
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
