--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Bugfixes:
  - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
  - GBA Memory: Properly bounds-check VRAM accesses
  - GBA Memory: Fix initial DMA state
+ - GBA BIOS: Fix HuffUnComp boundary conditions
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
