--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@ Bugfixes:
  - GBA Memory: Properly bounds-check VRAM accesses
  - GBA Memory: Fix initial DMA state
  - GBA BIOS: Fix HuffUnComp boundary conditions
+ - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
