--- a/CHANGES
+++ b/CHANGES
@@ -60,6 +60,7 @@ Bugfixes:
  - GBA Memory: Fix alignment of open bus 8- and 16-bit loads
  - GBA BIOS: Fix HuffUnComp boundary conditions
  - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
+ - GBA Audio: Properly initialize audio FIFO channels
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
