GBA: Improve accuracy of event timing

--- a/CHANGES
+++ b/CHANGES
@@ -73,6 +73,7 @@ Misc:
  - GBA Memory: Simplify memory API and use fixed bus width
  - GBA Video: Start video at the last scanline instead of the first
  - Debugger: Watchpoints now work on STM/LDM instructions
+ - GBA: Improve accuracy of event timing
 
 0.1.0: (2014-12-13)
  - Initial release
