--- a/CHANGES
+++ b/CHANGES
@@ -61,6 +61,7 @@ Bugfixes:
  - GBA BIOS: Fix HuffUnComp boundary conditions
  - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
  - GBA Audio: Properly initialize audio FIFO channels
+ - Util: Fix SOCKET_FAILED macro
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
