--- a/CHANGES
+++ b/CHANGES
@@ -20,59 +20,14 @@ Features:
  - Support BPS patches
  - Configurable game overrides
 Bugfixes:
- - Qt: Fix issue with set frame sizes being the wrong height
- - Qt: Fix emulator crashing when full screen if a game is not running
- - GBA Thread: Allow halted games to exit cleanly
- - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
- - ARM7: Fix LDM writeback to a register already written
- - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
  - ARM7: Extend prefetch by one stage
- - GBA BIOS: Fix BIOS prefetch after returning from a SWI
- - Debugger: Negative PC-relative loads now properly subtract the offset
- - Qt: Fix window focus issues
  - GBA Audio: Support 16-bit writes to FIFO audio
- - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
- - Qt: Properly set default video recording settings
- - GBA Audio: Make larger buffer sizes than 2048 actually work properly
  - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
- - GBA Video: Fix blend issues with obscured middle layers
- - Video: Ensure FFmpeg encoder has audio frames
- - Video: Fix uncompressed PCM audio recording
- - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
- - Debugger: Align PC-relative loads in Thumb
- - Debugger: Fix watchpoints triggering too late
- - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
- - GBA Video: Fix window interactions with 16-color mode 0 mosaic
- - GBA Video: Fix sprite boundary conditions with mosaic
- - Video: Fix FFmpeg crashing when the file extension is wrong
- - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
- - Qt: Fix a race condition when a game crashes immediately
- - Qt: Fix some cases where key mapping can break if focus is adjusted
- - GBA Memory: Filter out top nybble of DMA addresses
- - Debugger: Fix binary print putting spaces between digits
- - GBA BIOS: Fix LZ77UnCompVram to use 16-bit loads from decompressed memory
- - GBA BIOS: Fix HuffUnComp to work when games pass an invalid bit length
- - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
- - GBA Memory: Properly bounds-check VRAM accesses
- - GBA Memory: Fix initial DMA state
  - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
  - GBA BIOS: Fix BIOS prefetch after reset
  - GBA Memory: Fix alignment of open bus 8- and 16-bit loads
- - GBA BIOS: Fix HuffUnComp boundary conditions
- - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
- - GBA Audio: Properly initialize audio FIFO channels
- - Util: Fix SOCKET_FAILED macro
- - GBA: Fix timers 2 and 3 updating incorrectly
- - Qt: Fix crash if a game pauses before any frames are shown
 Misc:
- - Qt: Disable sync to video by default
- - GBA: Exit cleanly on FATAL if the port supports it
- - Qt: Handle a game crash without crashing
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
- - Qt: Set default log level to FATAL, ERROR and WARN
- - Qt: Clarify some phrasing in the menus
- - GBA Memory: Implement 16- and 32-bit loads from SRAM
- - Qt: Clear active buttons when focus is lost
  - GBA Memory: Simplify memory API and use fixed bus width
  - GBA Video: Start video at the last scanline instead of the first
  - Debugger: Watchpoints now work on STM/LDM instructions
@@ -80,6 +35,55 @@ Misc:
  - Debugger: Clean up GDB stub network interfacing
  - Debugger: Simplify debugger state machine to play nicer with the GBA thread loop
  - Debugger: Merge Thumb BL instructions when disassembling
+
+0.1.1: (2015-01-24)
+Bugfixes:
+ - ARM7: Fix LDM writeback to a register already written
+ - GBA: Fix timers 2 and 3 updating incorrectly
+ - GBA Audio: Make larger buffer sizes than 2048 actually work properly
+ - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
+ - GBA Audio: Properly initialize audio FIFO channels
+ - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
+ - GBA BIOS: Fix BIOS prefetch after returning from a SWI
+ - GBA BIOS: Fix LZ77UnCompVram to use 16-bit loads from decompressed memory
+ - GBA BIOS: Fix HuffUnComp to work when games pass an invalid bit length
+ - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
+ - GBA BIOS: Fix HuffUnComp boundary conditions
+ - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
+ - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
+ - GBA Memory: Filter out top nybble of DMA addresses
+ - GBA Memory: Properly bounds-check VRAM accesses
+ - GBA Memory: Fix initial DMA state
+ - GBA Thread: Allow halted games to exit cleanly
+ - GBA Video: Fix blend issues with obscured middle layers
+ - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
+ - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
+ - GBA Video: Fix window interactions with 16-color mode 0 mosaic
+ - GBA Video: Fix sprite boundary conditions with mosaic
+ - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
+ - Qt: Fix issue with set frame sizes being the wrong height
+ - Qt: Fix emulator crashing when full screen if a game is not running
+ - Qt: Fix window focus issues
+ - Qt: Properly set default video recording settings
+ - Qt: Fix a race condition when a game crashes immediately
+ - Qt: Fix some cases where key mapping can break if focus is adjusted
+ - Qt: Fix crash if a game pauses before any frames are shown
+ - Debugger: Negative PC-relative loads now properly subtract the offset
+ - Debugger: Align PC-relative loads in Thumb
+ - Debugger: Fix watchpoints triggering too late
+ - Debugger: Fix binary print putting spaces between digits
+ - Video: Ensure FFmpeg encoder has audio frames
+ - Video: Fix uncompressed PCM audio recording
+ - Video: Fix FFmpeg crashing when the file extension is wrong
+ - Util: Fix SOCKET_FAILED macro
+Misc:
+ - GBA: Exit cleanly on FATAL if the port supports it
+ - GBA Memory: Implement 16- and 32-bit loads from SRAM
+ - Qt: Disable sync to video by default
+ - Qt: Handle a game crash without crashing
+ - Qt: Set default log level to FATAL, ERROR and WARN
+ - Qt: Clarify some phrasing in the menus
+ - Qt: Clear active buttons when focus is lost
 
 0.1.0: (2014-12-13)
  - Initial release
