Qt: Drag and drop game loading (fixes #146)

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Features:
  - Support BPS patches
  - Configurable game overrides
  - Support loading 7-Zip files
+ - Drag and drop game loading
 Bugfixes:
  - ARM7: Extend prefetch by one stage
  - GBA Audio: Support 16-bit writes to FIFO audio
