--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Bugfixes:
  - Perf: Fix crash when the GBA thread fails to start
  - SDL: Properly clean up if a game doesn't launch
  - Debugger: Disassembly now lists PSR bitmasks (fixes #191)
+ - GBA BIOS: Prevent CpuSet and CpuFastSet from using BIOS addresses as a source (fixes #184)
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
