GBA: Add API for getting Configuration structs for overrides and input

--- a/CHANGES
+++ b/CHANGES
@@ -45,6 +45,7 @@ Misc:
  - Debugger: Merge Thumb BL instructions when disassembling
  - Debugger: Clean up debugger interface, removing obsolete state (fixes #67)
  - Debugger: Watchpoints now report address watched (fixes #68)
+ - GBA: Add API for getting Configuration structs for overrides and input
 
 0.1.1: (2015-01-24)
 Bugfixes:
