--- a/CHANGES
+++ b/CHANGES
@@ -52,6 +52,7 @@ Misc:
  - GBA: Refactor gba directory, dropping gba- prefix and making supervisor directory
  - Debugger: Add support for soft breakpoints
  - Util: Use proper locale for reading and writing float values
+ - Debugger: Make I/O register names be addresses instead of values
 
 0.1.1: (2015-01-24)
 Bugfixes:
