--- a/CHANGES
+++ b/CHANGES
@@ -57,6 +57,7 @@ Misc:
  - Debugger: Make I/O register names be addresses instead of values
  - Debugger: Rename read/write commands
  - Qt: Optimize logo drawing
+ - Qt: Move frame upload back onto main thread
 
 0.1.1: (2015-01-24)
 Bugfixes:
