--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Bugfixes:
  - GBA: Fix savestate loading of DISPSTAT and WAITCNT registers
  - Qt: Fix crash starting a GDB stub if a game isn't loaded
  - Qt: Fix crash when adjusting settings after closing a game
+ - Qt: Fix crash when starting GDB stub after closing a game
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
