Qt: Fix crash when loading a game after stopping GDB server

--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@ Bugfixes:
  - Qt: Fix crash when starting GDB stub after closing a game
  - Qt: Fix patch loading while a game is running
  - Util: Fix sockets on Windows
+ - Qt: Fix crash when loading a game after stopping GDB server
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
