All: Update CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ Features:
  - Debugger: Add CLI functions for examining memory regions
  - Runtime configurable audio driver
  - Debugger: Add CLI function for writing a register
+ - Libretro core for use with RetroArch and other front-ends
 Bugfixes:
  - ARM7: Extend prefetch by one stage
  - GBA Audio: Support 16-bit writes to FIFO audio
