GBA: Initialize gba.sync to null

--- a/CHANGES
+++ b/CHANGES
@@ -49,6 +49,7 @@ Bugfixes:
  - Util: Fix sockets on Windows
  - Qt: Fix crash when loading a game after stopping GDB server
  - GBA BIOS: Fix BIOS decompression routines with invalid source addresses
+ - GBA: Initialize gba.sync to null
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
