--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ Features:
  - Debugger: Add CLI function for writing a register
  - Libretro core for use with RetroArch and other front-ends
  - Controller profiles for setting different bindings for different controllers
+ - Ability to lock aspect ratio
 Bugfixes:
  - ARM7: Extend prefetch by one stage
  - GBA Audio: Support 16-bit writes to FIFO audio
