GBA Memory: Fix cycle counting for 32-bit load/stores

--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@ Bugfixes:
  - GBA: Initialize gba.sync to null
  - GBA: Fix timer initialization
  - GBA Memory: Fix I cycles that had been moved to ARM7 core
+ - GBA Memory: Fix cycle counting for 32-bit load/stores
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
