--- a/CHANGES
+++ b/CHANGES
@@ -59,6 +59,7 @@ Bugfixes:
  - GBA: Fix timer initialization
  - GBA Memory: Fix I cycles that had been moved to ARM7 core
  - GBA Memory: Fix cycle counting for 32-bit load/stores
+ - ARM7: Fix cycle counting for loads
 Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - GBA Memory: Simplify memory API and use fixed bus width
