--- a/CHANGES
+++ b/CHANGES
@@ -84,6 +84,7 @@ Misc:
  - GBA Thread: Make GBASyncWaitFrameStart time out
  - GBA: Move A/V stream interface into core
  - GBA: Savestates now take into account savedata state machines (fixes #109)
+ - Qt: Remember window position
 
 0.1.1: (2015-01-24)
 Bugfixes:
