--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.2.1: (Future)
+Bugfixes:
+ - GBA: Fix timers not updating timing when writing to only the reload register
+
 0.2.0: (2015-04-03)
 Features:
  - Support for gamepad axes, e.g. analog sticks or triggers
