--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 Bugfixes:
  - GBA: Fix timers not updating timing when writing to only the reload register
  - All: Fix sanitize-deb script not cleaning up after itself
+ - Qt: Fix Display object leak when closing a window
 
 0.2.0: (2015-04-03)
 Features:
