GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Bugfixes:
  - All: Fix sanitize-deb script not cleaning up after itself
  - Qt: Fix Display object leak when closing a window
  - Qt: Fix .deb dependencies
+ - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
 
 0.2.0: (2015-04-03)
 Features:
