--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - Qt: Fix Display object leak when closing a window
  - Qt: Fix .deb dependencies
  - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
+ - Qt: Fix "QOpenGLContext::swapBuffers() called with non-exposed window" warning
 
 0.2.0: (2015-04-03)
 Features:
