--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Bugfixes:
  - Qt: Fix .deb dependencies
  - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
  - Qt: Fix "QOpenGLContext::swapBuffers() called with non-exposed window" warning
+ - GBA Memory: Ensure changing the timing of a DMA reschedules it
 
 0.2.0: (2015-04-03)
 Features:
