--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Features:
  - Ability to mute individual audio channels
  - Palette viewer
  - Volume control
+ - More shortcuts are editable (e.g. quick save/load, solar sensor)
 Bugfixes:
  - GBA: Fix timers not updating timing when writing to only the reload register
  - All: Fix sanitize-deb script not cleaning up after itself
