Qt: Fix potential crash if a gamepad causes focus to change

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Bugfixes:
  - Qt: Fix regression where video would not record if the game had already started
  - GBA: Fix rewind boundary conditions
  - GBA: Add initial I/O register settings for background matrix registers
+ - Qt: Fix potential crash if a gamepad causes focus to change
 Misc:
  - Qt: Show multiplayer numbers in window title
 
