--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Features:
  - More shortcuts are editable (e.g. quick save/load, solar sensor)
  - Rewind now shows the frame after rewinding
  - Import/Export of GameShark/Action Replay snapshots
+ - Add "Step backwards" item for single increment rewind
 Bugfixes:
  - GBA: Fix timers not updating timing when writing to only the reload register
  - All: Fix sanitize-deb script not cleaning up after itself
