--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Bugfixes:
  - GBA: Fix rewind boundary conditions
  - GBA: Add initial I/O register settings for background matrix registers
  - Qt: Fix potential crash if a gamepad causes focus to change
+ - GBA Memory: Allow SRAM to be 64kB
 Misc:
  - Qt: Show multiplayer numbers in window title
 
