--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - Qt: Fix potential crash if a gamepad causes focus to change
  - GBA Memory: Allow SRAM to be 64kB
  - Qt: Fix controller axis querying
+ - GBA Memory: Fix 32-bit loads from unaddress cartridge space
 Misc:
  - Qt: Show multiplayer numbers in window title
 
