Qt: Fix multiplayer windows opening as the wrong size

--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ Bugfixes:
  - Qt: Fix controller axis querying
  - GBA Memory: Improve Thumb open bus behavior
  - GBA Memory: Fix 32-bit loads from unaddress cartridge space
+ - Qt: Fix multiplayer windows opening as the wrong size
 Misc:
  - Qt: Show multiplayer numbers in window title
 
