--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - Qt: Fix controllers sometimes not loading the right profile
 Misc:
  - Qt: Show multiplayer numbers in window title
+ - Qt: Handle saving input settings better
 
 0.2.0: (2015-04-03)
 Features:
